--- a/style.css
+++ b/style.css
@@ -1270,7 +1270,7 @@ header.tzadminbar{
 .tz-menu li a{
     font-size: 13px;
     line-height: 38.4px;
-    color: #ffffff;
+    color: #D2CECE;
     padding: 23px 35px 24px;
     margin: 0;
     display: block;
