--- a/style.css
+++ b/style.css
@@ -12476,4 +12476,22 @@ body.theme-rtl header ul.nav-collapse .themeple_custom_menu_mega_menu ul li ul l
     background: #444;
     color: #fff;
 
+}.thumbnail {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
 }
+.thumbnail img {
+  position: absolute;
+  left: 50%;
+  top: 80%;
+  height: 100%;
+  width: auto;
+  -webkit-transform: translate(-50%,-50%);
+      -ms-transform: translate(-50%,-50%);
+          transform: translate(-50%,-50%);
+}
+.thumbnail img.portrait {
+  width: 100%;
+  height: auto;
