--- a/style.css
+++ b/style.css
@@ -3267,7 +3267,7 @@ div.wpcf7-validation-errors{
     position: absolute;
     left: 0;
     top: 0;
-    content: "\f08a";
+    content: "\f001";
     font-family: 'FontAwesome';
     color: #cccccc;
     font-size: 17px;
