--- a/css/timeline/flat.css
+++ b/css/timeline/flat.css
@@ -257,9 +257,10 @@
 
 /* single item (margines set from javascript) */
 .timelineFlat .item {
-	width:410px;
-	height:410px;
+	width:300px;
+	height:300px;
 	background:#eaeaea; 
+    background-image: url(../../images/eventodefault.png);
 	color:#777777;
 	font-size:14px;
 	line-height:14px;
@@ -270,6 +271,7 @@
 	position: absolute;
 	height: 4px;
 	background: #dd5555;
+    
 	width: 100%;
 	z-index: 2;
 	top:0;
