--- a/css/timeline/flat.css
+++ b/css/timeline/flat.css
@@ -30,7 +30,7 @@
 
 .timelineFlat.timelineFlatBlog .item .post_date {
 	font-family: Montserrat;
-	background: #dd5555;
+	background: #33CC00;
 	color: #ffffff;
 	border-radius: 50%;
 	width: 35px;
@@ -96,7 +96,7 @@
 	margin-top:35px;
 	height:10px;
 	border-left:1px solid transparent;
-	border-right:1px solid #b7b6b6;
+	border-right:1px solid #2F326B;
 	width:448px;
 }
 
@@ -104,7 +104,7 @@
 .timelineFlat .t_line_m.right {
 	left:449px;
 	width:449px;
-	border-left:1px solid #b7b6b6;
+	border-left:1px solid #2F326B;
 	border-right:1px solid transparent;
 }
 
@@ -113,7 +113,9 @@
 	font-family: Montserrat;
 	font-size: 12px;
 	margin:-30px 0 0;
-	color:#b7b6b6;
+	color:#2F326B;
+    font-weight: bold;
+    text-transform: uppercase;
 }
 
 
@@ -126,26 +128,26 @@
 	font-size:12px;
 	top:-25px;
 	position: relative;
-	color:#b7b6b6;
+	color:#2F326B;
 }
 .timelineFlat a.t_line_node:after {
 	content: "";
 	border-radius: 22px;
-	height: 10px;
-	width: 10px;
+	height: 15px;
+	width: 15px;
 	border: 2px solid #ffffff;
 	position: absolute;
 	top: 23px;
 	left: 50%;
 	margin: 0 0 0 -7px;
-	background:#dd5555;
+	background:#33CC00;
 }
 .timelineFlat a.t_line_node.active {
-	color:#dd5555;
+	color:#1A1C39;
 }
 
 .timelineFlat a.t_line_node.active:after {
-	border: 2px solid #b7b6b6;
+	border: 2px solid #2F326B;
 }
 
 /* node description */
@@ -177,7 +179,7 @@
 	display: block !important;
 	padding:8px;
 	border-radius: 3px;
-	background: #dd5555;
+	background: #33CC00;
 	position: relative;
 }
 .timelineFlat .t_node_desc span:after {
@@ -188,7 +190,7 @@
 	position: absolute;
 	bottom: -10px;
 	border:5px solid transparent;
-	border-top:5px solid #dd5555;
+	border-top:5px solid #33CC00;
 	left:50%;
 	margin-left: -5px;
 }
@@ -208,13 +210,13 @@
 	width:14px;
 	height:21px;
 	font-size: 21px;
-	color: #b7b6b6;
+	color: #2F326B;
 	position: relative;
 }
 
 .timelineFlat #t_line_left:hover,
 .timelineFlat #t_line_right:hover {
-	color: #dd5555;
+	color: #33CC00;
 }
 
 /* line arrow left */
@@ -257,8 +259,8 @@
 
 /* single item (margines set from javascript) */
 .timelineFlat .item {
-	width:300px;
-	height:300px;
+	width:250px;
+	height:220px;
 	background:#eaeaea; 
     background-image: url(../../images/eventodefault.png);
 	color:#777777;
@@ -270,7 +272,7 @@
 	content: "";
 	position: absolute;
 	height: 4px;
-	background: #dd5555;
+	background: #2F326B;
     
 	width: 100%;
 	z-index: 2;
@@ -287,7 +289,7 @@
 	left:50%;
 	margin: 4px 0 0 -6px;
 	border: 6px solid transparent;
-	border-top: 6px solid #dd5555;
+	border-top: 6px solid #2F326B;
 	
 }
 /* ----- content - non-plugin elements ----- */
@@ -302,7 +304,8 @@
 	margin: 0;
 	font-size:12px;
 	line-height:12px;
-	color: #dd5555;
+	color: #2F326B;
+    font-weight: bold;
 	
 }
 .timelineFlat .item span{
@@ -320,13 +323,13 @@
 	cursor:pointer;
 	margin: 0 20px 20px;
 	border-radius: 3px;
-	background:#dd5555;
+	background:#2F326B;
 	transition:background-color 300ms;
 	-webkit-transition: background-color 300ms;
 	-moz-transition: background-color 300ms;
 }
 .timelineFlat .item .read_more:hover {
-	background:#f75f5f;
+	background:#424697;
 }
 /* ----------------------------------------- */
 
@@ -347,7 +350,7 @@
 	padding-top:0;
 	font-size:12px;
 	line-height:12px;
-	color: #dd5555;
+	color: #33CC00;
 }
 
 /* item details content wrapper (used for animation - shuld have same width as .item_open) */
@@ -378,7 +381,7 @@
 	margin-right: 16px;
 }
 .timelineFlat .mCS-light-thin > .mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar  {
-	background: #dd5555;
+	background: #33CC00;
 }
 .timelineFlat .mCS-light-thin > .mCSB_scrollTools .mCSB_dragger:hover .mCSB_dragger_bar {
 	color:#f75f5f;
@@ -398,7 +401,7 @@
 	height: 12px;
 	font-size:16px;
 	line-height: 12px;
-	color: #dd5555;
+	color: #33CC00;
 	cursor:pointer;
 	z-index:2;
 	text-align: center;
