--- a/css/timeline/flat.css
+++ b/css/timeline/flat.css
@@ -331,6 +331,16 @@
     color: #2F326B;
     line-height:1;
 
+
+}
+.atimeLine{
+       font-size: 18px;
+    color: #2F326B;
+    line-height: 1;
+    display: block;
+    position: relative;
+    top: 50%;
+    margin-top: -40px;
 }
 .timelineFlat .item .read_more {
 	font-family: Montserrat;
