--- a/css/timeline/style.css
+++ b/css/timeline/style.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+﻿@charset "utf-8";
 /* CSS Document */
 
 @font-face {
@@ -27,7 +27,7 @@
 
 
 h1,h2,h3,h4,h5,h6 {
-	font-family: 'BebasNeueRegular', Sans;
+	
 	font-weight: normal;
 	color:#313131;
 	margin:10px 0;
