--- a/css/timeline/flat.css
+++ b/css/timeline/flat.css
@@ -110,7 +110,6 @@
 
 /* month caption */
 .timelineFlat h4.t_line_month {
-	font-family: Montserrat;
 	font-size: 12px;
 	margin:-30px 0 0;
 	color:#2F326B;
@@ -123,7 +122,6 @@
 .timelineFlat a.t_line_node {
 	text-decoration:none;
 	padding:38px 0 4px;
-	font-family: Montserrat;
 	height:10px;
 	font-size:12px;
 	top:-25px;
@@ -135,19 +133,22 @@
 	border-radius: 22px;
 	height: 15px;
 	width: 15px;
-	border: 2px solid #ffffff;
+	
 	position: absolute;
 	top: 23px;
 	left: 50%;
 	margin: 0 0 0 -7px;
-	background:#33CC00;
+    border: 2px solid #2F326B;
+	background:#D2B811;
 }
 .timelineFlat a.t_line_node.active {
 	color:#1A1C39;
+    font-weight:bolder;
 }
 
 .timelineFlat a.t_line_node.active:after {
 	border: 2px solid #2F326B;
+    background:#2F326B;
 }
 
 /* node description */
@@ -179,9 +180,9 @@
 	display: block !important;
 	padding:8px;
 	border-radius: 3px;
-	background: #33CC00;
+    background:#2F326B;
 	position: relative;
-}
+   }
 .timelineFlat .t_node_desc span:after {
 	content: "";
 	width: 0;
@@ -190,9 +191,10 @@
 	position: absolute;
 	bottom: -10px;
 	border:5px solid transparent;
-	border-top:5px solid #33CC00;
+	border-top:5px solid #2F326B;
 	left:50%;
 	margin-left: -5px;
+
 }
 
 
@@ -206,17 +208,17 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	cursor:pointer;
-	top:39px;
+	top:26px;
 	width:14px;
 	height:21px;
-	font-size: 21px;
+	font-size:47px;
 	color: #2F326B;
 	position: relative;
 }
 
 .timelineFlat #t_line_left:hover,
 .timelineFlat #t_line_right:hover {
-	color: #33CC00;
+	color: #D2B811;
 }
 
 /* line arrow left */
@@ -305,12 +307,13 @@
         margin: 0;
         font-size: 12px;
         line-height: 12px;
-        color: #2F326B;
+        color: #ffffff;
         font-weight: bold;
         background-image: url('../../images/botton.png');
         background-repeat:no-repeat;
-        background-position: 10px 0px;
+        background-position: 10px 6px;
          border-bottom: 1px solid #A2C0BC;
+         background-color: #2F326B;
     }
 .timelineFlat .item span.TituloTimeline{
 	
