--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,16 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-
+@font-face {
+    font-family: 'Nexa';
+    src: url('../font/Nexa Light.otf') format('opentype');
+    font-weight: normal;
+}
+@font-face {
+    font-family: 'Nexa';
+    src: url('../font/Nexa Bold.otf') format('opentype');
+      font-weight: bold;
+}
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -53,7 +62,7 @@ html,body { height: 100%; }
 body {
   color: #fff;
   margin: 0 auto;
-  font: 1em/1.3em Helvetica, sans-serif;
+  font: 1em/1.3em Nexa;
 	background-color: #333;  
 }
 .header {
