--- a/style.css
+++ b/style.css
@@ -2287,7 +2287,7 @@ nav .themeple_custom_menu_mega_menu.themeple_mega5 ul li ul li{
     font-size: 12px;
     line-height: 24px;
     color: #666666;
-    text-align: center;
+    text-align: left;
     padding: 12px 0;
 }
 .ourstory_content p{
@@ -2296,7 +2296,7 @@ nav .themeple_custom_menu_mega_menu.themeple_mega5 ul li ul li{
     font-size: 12px;
     line-height: 24px;
     color: #666666;
-    text-align: center;
+    text-align: left;
     letter-spacing: 0.4px;
 }
 .title_ourstory{
