altura minima dos boxes de eventos

--- a/style.css
+++ b/style.css
@@ -2468,6 +2468,7 @@ nav .themeple_custom_menu_mega_menu.themeple_mega5 ul li ul li{
     text-align: center;
     color: #666666;
     background: #fff;
+     min-height: 178px;
 }
 .tzintroduct:hover .tzintroduct-img img{
     transform: scale(3) rotate(45deg);
