cor do fundo mais escura

--- a/style-inline.css
+++ b/style-inline.css
@@ -290,7 +290,7 @@ body#bd {background: #f5f5f5;}
 .vc_custom_1423198729821{
     padding-top: 85px !important;
     padding-bottom: 65px !important;
-    background-color: #f6f6f6 !important;
+    background-color: #efeee3 !important;
 }
 .vc_custom_1423129776931{
     padding-top: 93px !important;
@@ -314,7 +314,7 @@ body#bd {background: #f5f5f5;}
     border-top: 1px solid #f5f5f5 !important;
 }
 .vc_custom_1423214748296 {
-    background-color: #f5f5f5 !important;
+    background-color: #efeee3 !important;
     padding-bottom: 85px !important;
     padding-top: 59px !important;
 }
